1. 添加eye in hand相应代码。 2. 重构代码框架

--- a/src/vision/CMakeLists.txt
+++ b/src/vision/CMakeLists.txt
@@ -147,10 +147,13 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/vision_node.cpp)
-add_executable(imageProcess src/image_process.cpp)
-add_executable(camera_calibrate_hand_eye src/camera_calibrate_hand_eye.cpp)
-add_executable(object_detection_color src/object_detection_color.cpp)
-add_executable(vision_command src/vision_command.cpp)
+add_executable(imageProcess               src/image_process.cpp)
+add_executable(camera_calibrate_hand_eye  src/camera_calibrate_hand_eye.cpp
+                                          src/assist_tools
+                                          src/calibration_handeye_opencv346.cpp)
+add_executable(object_detection_color     src/object_detection_color.cpp
+                                          src/assist_tools)
+add_executable(vision_command             src/vision_command.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -170,7 +173,7 @@ add_executable(vision_command src/vision_command.cpp)
 target_link_libraries(imageProcess ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 target_link_libraries(camera_calibrate_hand_eye ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${realsense2_LIBRARY})
 target_link_libraries(object_detection_color ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${realsense2_LIBRARY})
-target_link_libraries(vision_command ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${realsense2_LIBRARY})
+target_link_libraries(vision_command ${catkin_LIBRARIES})
 
 #############
 ## Install ##
