--- a/src/vision/package.xml
+++ b/src/vision/package.xml
@@ -55,6 +55,7 @@
   <build_depend>cv_bridge</build_depend>
     <!-- <build_depend>sensor_msgs</build_depend> -->
   <build_depend>image_transport</build_depend>
+  <build_depend>tf</build_depend>
   <build_depend>robot_jaka</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
@@ -65,6 +66,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <!-- <exec_depend>sensor_msgs</exec_depend> -->
   <exec_depend>image_transport</exec_depend>
+  <exec_depend>tf</exec_depend>
   <exec_depend>robot_jaka</exec_depend>
 
 
