--- a/src/vision_rocr6/package.xml
+++ b/src/vision_rocr6/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>vision</name>
+  <name>vision_rocr6</name>
   <version>0.1.0</version>
-  <description>The vision package</description>
+  <description>The vision package for Robot rocr6</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -55,7 +55,7 @@
   <build_depend>cv_bridge</build_depend>
     <!-- <build_depend>sensor_msgs</build_depend> -->
   <build_depend>image_transport</build_depend>
-  <build_depend>tf</build_depend>
+  <build_depend>rocr6_msgs</build_depend>
   <build_depend>robot_jaka</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
@@ -66,7 +66,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <!-- <exec_depend>sensor_msgs</exec_depend> -->
   <exec_depend>image_transport</exec_depend>
-  <exec_depend>tf</exec_depend>
+  <exec_depend>rocr6_msgs</exec_depend>
   <exec_depend>robot_jaka</exec_depend>
 
 
