--- a/src/vision_rocr6/package.xml
+++ b/src/vision_rocr6/package.xml
@@ -56,7 +56,7 @@
     <!-- <build_depend>sensor_msgs</build_depend> -->
   <build_depend>image_transport</build_depend>
   <build_depend>rocr6_msgs</build_depend>
-  <build_depend>robot_jaka</build_depend>
+  <build_depend>g3p_msgs</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
   
@@ -67,7 +67,7 @@
   <!-- <exec_depend>sensor_msgs</exec_depend> -->
   <exec_depend>image_transport</exec_depend>
   <exec_depend>rocr6_msgs</exec_depend>
-  <exec_depend>robot_jaka</exec_depend>
+  <exec_depend>g3p_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
